# rust-surrealdb-iam

./: .gitignore  Cargo.toml  README.md
src/: db.rs  env.rs  error.rs  main.rs  role.rs  user.rs  web_server.rs
src/role/: api.rs  controller.rs  mod.rs  model.rs  role_binding.rs
src/user/: api.rs  controller.rs  mod.rs  model.rs
